# novel_similarity_test

./: .env  pyproject.toml  test.ipynb  test.py
data/: stopwords
data/negative/: 一夜惊喜：超级总裁喜当爹.txt  一胎六宝：总裁爸比超凶猛.txt  一胎双宝：季总你出局了.txt  七年之痒，前夫不知道我重生了.txt  七爷的罪妻.txt  三宝联萌 大佬妈咪拽又飒.txt  三宝联萌：大佬妈咪拽又飒.txt  三年恋情曝光，我成了白月光的替身.txt  乔秘书离职结婚，陆总醋疯了.txt  九零团宠三岁半.txt  二婚甜妻：祁少，正经点！.txt  五十再嫁，我提离婚他疯了.txt  今夜离婚，我转身二嫁顶级大佬.txt  你是我唯一的甜.txt  傅爷快掉马，夫人嫁的是你啊！.txt  傅爷的小妖精又美又野.txt  先婚厚爱：帝少宠妻成瘾.txt  冷战两年，她离婚他发疯.txt  出狱后我闪婚冰山女总裁.txt  前妻可口：顾少离婚请签字 .txt  名门娇妻：老婆又野又美.txt  团宠大佬是作者本人.txt  团宠娇妻：残疾大佬暗恋我.txt  大佬你的小娇娇甜翻了.txt  大叔离婚请放手.txt  大叔，你家小祖宗携宝潜逃了！.txt  夫人她又在虐渣了.txt  夫人她拿了霸总剧本.txt  失忆成了薄爷掌心娇，豪横一点怎么了？.txt  她每天装乖.txt  妻路盛宠.txt  姜秘书甩离婚书，霍总红眼失控.txt  婚情漫漫，周律师他见不得光.txt  嫁给豪门老男人，小娇妻被宠疯了.txt  守八年活寡，侯门主母要和离.txt  巨星重生 阮少盛宠复仇妻.txt  年过五十被丈夫抛弃后，她转身嫁给云城首富.txt  微醺夜，她狂撩，京圈大佬红温了.txt  总裁不坏我不爱.txt  总裁偏宠替身妻.txt  (+59 more)
data/positive/: 1-相亲闪婚后，老公竟是千亿财阀.txt  10-腹黑娇妻：厉少，人设崩坏中.txt  100 小夫人一身反骨，大叔乖乖臣服.txt  101 墨爷的闪婚小甜妻.txt  102 流年不负你情深.txt  13-帝少甜婚令：娇妻，乖一点.txt  14-闪婚厚爱：病娇老公竟是千亿大佬.txt  17-闪婚三年不见面，再遇我是他秘书.txt  不受宠？无所谓，杀疯豪门万人跪 (1~20章)-总裁、多重身份、傲慢霸气、复仇、男-有魅力的角色、浪漫、甜蜜、言情、大女主、甜宠.txt  不当舔狗后，肥妻她美又飒！ (1~20章)-多重身份、离婚、豪门霸总、真假千金、追妻火葬场、破镜重圆、甜宠、打脸.txt  二嫁纨绔：嫡长女她杀疯了 (1~20章)-复仇、重生、傲慢霸气、男-腹黑角色.txt  傅总，太太又在给你征婚了 (1~20章)-总裁、契约婚姻、怀孕、秘书、秘密关系.txt  分手后，禁欲厉总拿命轻哄！ (1~20章)-裁、复仇、男-腹黑角色.txt  前妻难追：战少请自重！ (1~20章)-总裁、离婚、契约婚姻.txt  厉总快追，太太前夫又找上门了！ (1~20章)-总裁、离婚、男-有魅力的角色、一夜情、名流、言情、豪门霸总.txt  厉总，夫人她不是白月光替身 (1~20章)-总裁、离婚、怀孕、一见钟情、多重身份.txt  天价哑妻：夫人带球跑了！ (1~20章)-总裁、离婚、怀孕.txt  (+25 more)
src/: __init__.py  diff.py  lda_model.py  preprocess.py  read_file.py  text_hash.py
(+8 files in other folders)
