[project]
name = "rag-text-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "dotenv>=0.9.9",
    "gensim>=4.3.3",
    "jieba>=0.42.1",
    "jupyter>=1.1.1",
    "numpy~=1.26.4",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic~=1.10.2",
    "pyldavis>=3.4.1",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
]
